@@ -1,34 +1,0 @@
-/** \page deref node-reference() and node-by-reference()
-
-These functions are defined in the module:\n
-\code
-import module namespace zorba-ref-fn =
-  "http://www.zorba-xquery.com/zorba/node-ref-functions";
-\endcode
-
-
-\section nodereference node-reference()
-
-\code
-zorba-ref-fn:node-reference($arg as node()) as xs:anyURI
-\endcode
-
-Computes the URI for the given node.\n
-Example:
-
-\include reference_doc_example_01.xq
-
-
-\section nodebyreference node-by-reference()
-
-\code
-zorba-ref-fn:node-by-reference($arg as xs:anyURI) as node()?
-\endcode
-
-Returns the node which is identified by a reference.\n
-If it doesn't exist, empty sequence is returned.\n
-Example:
-
-\include reference_doc_example_02.xq
-
-*/
