@@ -186,6 +186,8 @@
   FN_NUMGEN_0,
   FN_ZORBA_UTIL_RANDOM_0,
   FN_ZORBA_UTIL_RANDOM_1,
+  FN_ZORBA_RANDOM_RANDOM_0,
+  FN_ZORBA_RANDOM_RANDOM_1,
   FN_ZORBA_UTIL_UUID_0,
   FN_ZORBA_UTIL_SCHEMA_TYPE_1,
   FN_ZORBA_SCHEMA_SCHEMA_TYPE_1,
