@@ -65,6 +65,34 @@ Helper Iterator to produce a defined amount of integer items for testing purpose
 
 <!--
 /*******************************************************************************
+ Zorba pseudo-random: generates a pseudo-random integer
+********************************************************************************/
+-->
+<zorba:iterator name="PseudoRandomIterator" arity="nary">
+
+  <zorba:description author="Zorba Team">Function for generating a random integer.</zorba:description>
+
+  <zorba:function>
+
+    <zorba:signature localname="random" prefix="fn-zorba-random">
+      <zorba:output>xs:integer</zorba:output>
+    </zorba:signature>
+
+    <zorba:signature localname="random" prefix="fn-zorba-random">
+      <zorba:param>xs:integer</zorba:param>
+      <zorba:output>xs:integer</zorba:output>
+    </zorba:signature>
+
+    <zorba:methods>
+      <zorba:isDeterministic returnValue="false"/>
+    </zorba:methods>
+
+  </zorba:function>
+    
+</zorba:iterator>
+
+<!--
+/*******************************************************************************
  Zorba UUID: generates UUID
 ********************************************************************************/
 -->
