@@ -33,6 +33,7 @@
 #define ZORBA_NODEREF_FN_NS         "http://www.zorba-xquery.com/zorba/node-ref-functions"
 #define ZORBA_INDEX_FN_NS           "http://www.zorba-xquery.com/zorba/index-functions"
 #define ZORBA_ALEXIS_FN_NS          "http://www.zorba-xquery.com/zorba/util-functions"
+#define ZORBA_RANDOM_FN_NS          "http://www.zorba-xquery.com/modules/random"
 #define ZORBA_SCHEMA_FN_NS          "http://www.zorba-xquery.com/modules/schema"
 #define ZORBA_EMAIL_FN_NS           "http://www.zorba-xquery.com/zorba/email-functions"
 #define ZORBA_JSON_FN_NS            "http://www.zorba-xquery.com/modules/json"
